<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="8dp"
    android:elevation="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="12dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/poster"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_toRightOf="@id/poster"
        android:id="@+id/movie_name"
        android:text="@string/dummy_name"
        android:textSize="14sp"
        android:layout_margin="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_name"
            android:layout_toRightOf="@id/poster"
            android:id="@+id/movie_desc"
            android:textSize="12sp"
            android:maxLines="4"
            android:minLines="1"
            android:text="@string/dummy_desc"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_rating"
            android:layout_marginBottom="12dp"
            android:layout_below="@id/poster"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:padding="8dp"
            android:background="@drawable/circle_border"
            android:text="@string/rating"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>